# python-rest-observable

./: docker-compose.yaml  readme.md  trace.sh
fastapi_app/: pyproject.toml
