[tool.poetry]
name = "fastapi-app"
version = "0.1.0"
description = ""
authors = ["Artur Das <a.daschevici@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "0.26.0"
fastapi = "0.108.0"
uvicorn = "0.25.0"
prometheus-client = "0.19.0"
opentelemetry-distro = "0.43b0"
opentelemetry-instrumentation-fastapi = "0.43b0"
opentelemetry-instrumentation-logging = "0.43b0"
opentelemetry-exporter-otlp = "1.22.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
ipython = "^8.20.0"
ipdb = "^0.13.13"
locust = "^2.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
